--- a/memberssync-website/about.html
+++ b/memberssync-website/about.html
@@ -27,7 +27,7 @@
         .btn-demo:hover{background:var(--primary);color:white;}
         .btn-start{padding:0.5rem 1.2rem;background:var(--gold);color:var(--dark);border-radius:8px;text-decoration:none;font-weight:700;font-size:0.88rem;transition:all 0.2s;border:2px solid var(--gold);}
         .btn-start:hover{background:#e0a830;transform:translateY(-1px);}
-        .hamburger{display:none;flex-direction:column;gap:5px;cursor:pointer;padding:4px;}
+        .hamburger{display:none;flex-direction:column;gap:5px;cursor:pointer;padding:4px;flex-shrink:0;z-index:1001;}
         .hamburger span{width:24px;height:2px;background:var(--primary);border-radius:2px;display:block;}
         .mobile-nav{display:none;position:fixed;top:72px;left:0;right:0;background:white;z-index:999;border-bottom:1px solid var(--border);box-shadow:var(--shadow);padding:1.5rem 2rem;flex-direction:column;gap:1rem;}
         .mobile-nav.open{display:flex;}
@@ -107,6 +107,7 @@
         .wa-float:hover .wa-tooltip{opacity:1;}
         @media(max-width:1024px){.about-grid,.ns-grid,.mission-grid{grid-template-columns:1fr;}.values-grid{grid-template-columns:repeat(2,1fr);}.footer-top{grid-template-columns:1fr 1fr;}}
         @media(max-width:768px){.nav-center,.nav-right .btn-demo,.nav-right .btn-start{display:none;}.hamburger{display:flex;}.values-grid{grid-template-columns:1fr;}.footer-top{grid-template-columns:1fr;}.footer-bottom{flex-direction:column;text-align:center;}}
+        @media(max-width:380px){.nav-container{padding:0 1rem;}.logo-name{font-size:1.3rem;}.logo-sub{font-size:0.55rem;}.nav-right{gap:0.5rem;}.lang-btn{padding:0.2rem 0.5rem;font-size:0.75rem;}}
     </style>
 </head>
 <body>
