--- a/memberssync-website/about.html
+++ b/memberssync-website/about.html
@@ -106,7 +106,7 @@
         .wa-tooltip{position:absolute;right:70px;top:50%;transform:translateY(-50%);background:var(--dark);color:white;white-space:nowrap;padding:0.5rem 1rem;border-radius:8px;font-size:0.82rem;opacity:0;pointer-events:none;transition:opacity 0.2s;}
         .wa-float:hover .wa-tooltip{opacity:1;}
         @media(max-width:1024px){.about-grid,.ns-grid,.mission-grid{grid-template-columns:1fr;}.values-grid{grid-template-columns:repeat(2,1fr);}.footer-top{grid-template-columns:1fr 1fr;}}
-        @media(max-width:768px){.nav-center,.nav-right .btn-demo,.nav-right .btn-start{display:none;}.hamburger{display:flex;}.values-grid{grid-template-columns:1fr;}.footer-top{grid-template-columns:1fr;}.footer-bottom{flex-direction:column;text-align:center;}}
+        @media(max-width:768px){.nav-container{padding:0 1rem;}.nav-center,.nav-right .btn-demo,.nav-right .btn-start{display:none;}.hamburger{display:flex;}.values-grid{grid-template-columns:1fr;}.footer-top{grid-template-columns:1fr;}.footer-bottom{flex-direction:column;text-align:center;}}
         @media(max-width:380px){.nav-container{padding:0 1rem;}.logo-name{font-size:1.3rem;}.logo-sub{font-size:0.55rem;}.nav-right{gap:0.5rem;}.lang-btn{padding:0.2rem 0.5rem;font-size:0.75rem;}}
     </style>
 </head>
