--- a/memberssync-website/index.html
+++ b/memberssync-website/index.html
@@ -224,6 +224,7 @@
             .footer-top { grid-template-columns: 1fr 1fr; }
         }
         @media (max-width: 768px) {
+            .nav-container { padding: 0 1rem; }
             .nav-center, .nav-right .btn-demo, .nav-right .btn-start { display: none; }
             .hamburger { display: flex; }
             
