--- a/memberssync-website/index.html
+++ b/memberssync-website/index.html
@@ -258,12 +258,12 @@
 <!-- NAVBAR -->
 <nav class="navbar" id="navbar">
     <div class="nav-container">
-        <a href="index.html" class="logo-wrap">
+        <a href="/" class="logo-wrap">
             <div class="logo-name">Member<span>Sync</span></div>
             <div class="logo-sub" data-lang-en="A Product of Next Solution" data-lang-fr="Un Produit de Next Solution">A Product of Next Solution</div>
         </a>
         <div class="nav-center">
-            <a href="index.html" class="active" data-lang-en="Home" data-lang-fr="Accueil">Home</a>
+            <a href="/" class="active" data-lang-en="Home" data-lang-fr="Accueil">Home</a>
             <a href="features.html" data-lang-en="Features" data-lang-fr="Fonctionnalités">Features</a>
             <a href="solutions.html" data-lang-en="Solutions" data-lang-fr="Solutions">Solutions</a>
             <a href="pricing.html" data-lang-en="Pricing" data-lang-fr="Tarifs">Pricing</a>
@@ -281,7 +281,7 @@
     </div>
 </nav>
 <div class="mobile-nav" id="mobileNav">
-    <a href="index.html">Home / Accueil</a>
+    <a href="/">Home / Accueil</a>
     <a href="features.html">Features / Fonctionnalités</a>
     <a href="solutions.html">Solutions</a>
     <a href="pricing.html">Pricing / Tarifs</a>
@@ -463,7 +463,7 @@
     <div class="footer-inner">
         <div class="footer-top">
             <div class="footer-brand">
-                <a href="index.html" class="logo-wrap" style="margin-bottom:1rem">
+                <a href="/" class="logo-wrap" style="margin-bottom:1rem">
                     <div class="logo-name">Member<span style="color:var(--accent)">Sync</span></div>
                     <div class="logo-sub" style="color:rgba(255,255,255,0.5)">A Product of Next Solution</div>
                 </a>
