--- a/memberssync-website/features.html
+++ b/memberssync-website/features.html
@@ -122,12 +122,12 @@
 <body>
 <nav class="navbar" id="navbar">
     <div class="nav-container">
-        <a href="index.html" class="logo-wrap">
+        <a href="/" class="logo-wrap">
             <div class="logo-name">Member<span>Sync</span></div>
             <div class="logo-sub">A Product of Next Solution</div>
         </a>
         <div class="nav-center">
-            <a href="index.html">Home</a>
+            <a href="/">Home</a>
             <a href="features.html" class="active">Features</a>
             <a href="solutions.html">Solutions</a>
             <a href="pricing.html">Pricing</a>
@@ -145,7 +145,7 @@
     </div>
 </nav>
 <div class="mobile-nav" id="mobileNav">
-    <a href="index.html">Home</a><a href="features.html">Features</a><a href="solutions.html">Solutions</a>
+    <a href="/">Home</a><a href="features.html">Features</a><a href="solutions.html">Solutions</a>
     <a href="pricing.html">Pricing</a><a href="how-it-works.html">How It Works</a><a href="about.html">About</a><a href="contact.html">Contact</a>
     <div class="mobile-btns"><a href="contact.html" class="btn-demo">Request Demo</a><a href="https://memberssync.com" class="btn-start">Get Started</a></div>
 </div>
@@ -340,7 +340,7 @@
 <footer><div class="footer-inner">
     <div class="footer-top">
         <div class="footer-brand">
-            <a href="index.html" class="logo-wrap" style="margin-bottom:1rem"><div class="logo-name">Member<span style="color:var(--accent)">Sync</span></div><div class="logo-sub" style="color:rgba(255,255,255,0.5)">A Product of Next Solution</div></a>
+            <a href="/" class="logo-wrap" style="margin-bottom:1rem"><div class="logo-name">Member<span style="color:var(--accent)">Sync</span></div><div class="logo-sub" style="color:rgba(255,255,255,0.5)">A Product of Next Solution</div></a>
             <p>Smart membership management for growing organizations across Africa and beyond.</p>
             <div class="footer-contact"><a href="tel:+237658504815">📞 +237 658 50 48 15</a><a href="mailto:support@memberssync.com">✉️ support@memberssync.com</a><a href="https://wa.me/237658504815" target="_blank">💬 WhatsApp</a></div>
         </div>
